@@ -8,6 +8,8 @@ PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.
 
 - #5785, [raster] ST_MapAlgebra segfaults when expression references
          a supernumerary rast argument (Dian M Fay)
+- #5787, Check that ST_ChangeEdgeGeom doesn't change winding of rings
+         (Sandro Santilli)
 
 * Enhancements *
 
